// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Main should match the snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Main />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <main
        className="App-Main undefined"
>
        <CardContainer
                activeCategoryInfo={undefined}
                activeCategoryName={undefined}
                addToFavorites={undefined}
                favorites={undefined}
                next={undefined}
                previous={undefined}
                updateCurrentCategory={undefined}
        />
</main>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <CardContainer
          activeCategoryInfo={undefined}
          activeCategoryName={undefined}
          addToFavorites={undefined}
          favorites={undefined}
          next={undefined}
          previous={undefined}
          updateCurrentCategory={undefined}
/>,
        "className": "App-Main undefined",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "activeCategoryInfo": undefined,
          "activeCategoryName": undefined,
          "addToFavorites": undefined,
          "favorites": undefined,
          "next": undefined,
          "previous": undefined,
          "updateCurrentCategory": undefined,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": "main",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <main
          className="App-Main undefined"
>
          <CardContainer
                    activeCategoryInfo={undefined}
                    activeCategoryName={undefined}
                    addToFavorites={undefined}
                    favorites={undefined}
                    next={undefined}
                    previous={undefined}
                    updateCurrentCategory={undefined}
          />
</main>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <CardContainer
            activeCategoryInfo={undefined}
            activeCategoryName={undefined}
            addToFavorites={undefined}
            favorites={undefined}
            next={undefined}
            previous={undefined}
            updateCurrentCategory={undefined}
/>,
          "className": "App-Main undefined",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "activeCategoryInfo": undefined,
            "activeCategoryName": undefined,
            "addToFavorites": undefined,
            "favorites": undefined,
            "next": undefined,
            "previous": undefined,
            "updateCurrentCategory": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": "main",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Main should render loading elements while api is fetching 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Main
    activeCategoryInfo={Array []}
    activeCategoryName="people"
    addToFavorites={[Function]}
    favorites={Array []}
    loading={true}
    next={null}
    previous={null}
    updateCurrentCategory={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <main
        className="App-Main people loading"
>
        <div
                className="loading-image people"
        >
                <div
                        className="loading-gif"
                />
        </div>
</main>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="loading-image people"
>
          <div
                    className="loading-gif"
          />
</div>,
        "className": "App-Main people loading",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="loading-gif"
/>,
          "className": "loading-image people",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "loading-gif",
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
        "type": "div",
      },
      "type": "main",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <main
          className="App-Main people loading"
>
          <div
                    className="loading-image people"
          >
                    <div
                              className="loading-gif"
                    />
          </div>
</main>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="loading-image people"
>
            <div
                        className="loading-gif"
            />
</div>,
          "className": "App-Main people loading",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="loading-gif"
/>,
            "className": "loading-image people",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "loading-gif",
            },
            "ref": null,
            "rendered": null,
            "type": "div",
          },
          "type": "div",
        },
        "type": "main",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Main should render the main page if no category selected 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Main
    activeCategoryInfo={Array []}
    activeCategoryName="main"
    addToFavorites={[Function]}
    favorites={Array []}
    loading={false}
    next={null}
    previous={null}
    updateCurrentCategory={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <main
        className="App-Main main"
>
        <iframe
                allow="autoplay; encrypted-media"
                allowFullScreen={true}
                frameBorder="1"
                height="640"
                src="https://www.youtube.com/embed/Aja1pCUZPso?rel=0&controls=0&showinfo=0&autoplay=1&volume=0&mute=1"
                title="iframe"
                width="1300"
        />
</main>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <iframe
          allow="autoplay; encrypted-media"
          allowFullScreen={true}
          frameBorder="1"
          height="640"
          src="https://www.youtube.com/embed/Aja1pCUZPso?rel=0&controls=0&showinfo=0&autoplay=1&volume=0&mute=1"
          title="iframe"
          width="1300"
/>,
        "className": "App-Main main",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "allow": "autoplay; encrypted-media",
          "allowFullScreen": true,
          "frameBorder": "1",
          "height": "640",
          "src": "https://www.youtube.com/embed/Aja1pCUZPso?rel=0&controls=0&showinfo=0&autoplay=1&volume=0&mute=1",
          "title": "iframe",
          "width": "1300",
        },
        "ref": null,
        "rendered": null,
        "type": "iframe",
      },
      "type": "main",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <main
          className="App-Main main"
>
          <iframe
                    allow="autoplay; encrypted-media"
                    allowFullScreen={true}
                    frameBorder="1"
                    height="640"
                    src="https://www.youtube.com/embed/Aja1pCUZPso?rel=0&controls=0&showinfo=0&autoplay=1&volume=0&mute=1"
                    title="iframe"
                    width="1300"
          />
</main>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <iframe
            allow="autoplay; encrypted-media"
            allowFullScreen={true}
            frameBorder="1"
            height="640"
            src="https://www.youtube.com/embed/Aja1pCUZPso?rel=0&controls=0&showinfo=0&autoplay=1&volume=0&mute=1"
            title="iframe"
            width="1300"
/>,
          "className": "App-Main main",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "allow": "autoplay; encrypted-media",
            "allowFullScreen": true,
            "frameBorder": "1",
            "height": "640",
            "src": "https://www.youtube.com/embed/Aja1pCUZPso?rel=0&controls=0&showinfo=0&autoplay=1&volume=0&mute=1",
            "title": "iframe",
            "width": "1300",
          },
          "ref": null,
          "rendered": null,
          "type": "iframe",
        },
        "type": "main",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
